--- a/Site Files/css/main.css
+++ b/Site Files/css/main.css
@@ -9,7 +9,7 @@ body {
 }
 
 #main-content-container{
-    background: #ffffff;
+    background: #fffef5;
     max-width: 1024px;
     margin: auto;
     margin-top: 16px;
