--- a/Site Files/css/header.css
+++ b/Site Files/css/header.css
@@ -1,5 +1,5 @@
 #masthead{
-    box-shadow: 3px 5px 5px grey;
+    box-shadow: 3px 5px 5px #b8b8b8;
     max-width: 1024px;
 }
 
@@ -39,7 +39,8 @@
     font-size: 70px;
     font-style: oblique;
     font-weight: bold;
-    color: #9b8b00;
+    color: #cfbc0b;
+    text-shadow: 0px 0px 8px #c4b000;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     padding-left: 32px;
@@ -57,7 +58,7 @@
     min-height: 44px;
     border-top-style: double;
     border-bottom-style: double;
-    border-left-style: double;
+    border-left: 4px ridge;
     border-right-style: ridge;
     border-color: #aaaaaa;
     background: #333333;
