--- a/Site Files/css/header.css
+++ b/Site Files/css/header.css
@@ -4,7 +4,7 @@
 }
 
 #mainhead {
-    background: #ffffff;
+    background: #f8f8f3;
     min-height: 128px;
     overflow: hidden;
     border-top: 4px ridge;
