--- a/Site Files/css/main.css
+++ b/Site Files/css/main.css
@@ -9,7 +9,7 @@ body {
 }
 
 #main-content-container{
-    background: #f5f4f0;
+    background: #f0eeea;
     max-width: 1024px;
     margin: auto;
     margin-top: 16px;
