--- a/Site Files/css/book-page.css
+++ b/Site Files/css/book-page.css
@@ -80,3 +80,46 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 22px;
 }
+
+.series-hr {
+    position: relative;
+    margin-left:48px;
+    margin-right: 48px;
+}
+.series-link-header {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: bolder;
+}
+
+.series-link-container {
+    position: relative;
+    left: 48px;
+    margin: auto;
+}
+
+.series-link-section {
+    overflow: auto;
+    position: relative;
+}
+
+.series-link {
+    float: left;
+    display: block;
+    padding-right: 16px;
+    margin-top: 0px;
+    margin-right: 8px;
+    margin-bottom: 0px;
+}
+
+.series-link img {
+    width: 80px;
+}
+
+.book-number {
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 0px;
+    position: relative;
+    top: -11px;
+    font-size: 11px;
+}
