--- a/Site Files/css/header.css
+++ b/Site Files/css/header.css
@@ -35,12 +35,13 @@
     float: left;
 }
 
+/* text-shadow: 0px 0px 8px #c4b000 */
 #main-title {
     font-size: 70px;
     font-style: oblique;
     font-weight: bold;
     color: #cfbc0b;
-    text-shadow: 0px 0px 8px #c4b000;
+    text-shadow: -1px 0 #000000, 0 1px #000000, 1px 0 #000000, 0 -1px #000000;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     padding-left: 32px;
